--- a/app.json
+++ b/app.json
@@ -39,6 +39,18 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/icon.png",
+          "color": "#E6F4FE",
+          "sounds": [
+            "./assets/sound/sound1.wav",
+            "./assets/sound/sound2.wav",
+            "./assets/sound/sound3.wav"
+          ]
+        }
       ]
     ],
     "experiments": {
